<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controleur.ChoixBaliseActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/select_balise" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:paddingLeft="50dp">

        <RadioButton
            android:id="@+id/balise1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="50dp"
            android:text="@string/balise1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/balise2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="50dp"
            android:text="@string/balise2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/balise3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="50dp"
            android:text="@string/balise3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/balise4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:paddingLeft="50dp"
            android:text="@string/balise4"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/balise_ok"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/ok" />

</LinearLayout>